force-app/main/default/objects/User/fields/Is_Donor_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Is_Donor_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Donor Coordinator?</label>
    <type>Checkbox</type>
</CustomField>