force-app/main/default/objects/User/fields/Is_System_Admin__c.field-meta.xml
<CustomField>
    <fullName>Is_System_Admin__c</fullName>
    <formula>IF(Profile.Name = &quot;System Administrator&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is System Admin?</label>
    <type>Checkbox</type>
</CustomField>