force-app/main/default/objects/User/fields/IsNurse__c.field-meta.xml
<CustomField>
    <fullName>IsNurse__c</fullName>
    <formula>OR(
    CONTAINS(Profile.Name, &apos;Nurse&apos;),
    CONTAINS(Profile.Name, &apos;System&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsNurse?</label>
    <type>Checkbox</type>
</CustomField>