force-app/main/default/objects/User/fields/IsScientist__c.field-meta.xml
<CustomField>
    <fullName>IsScientist__c</fullName>
    <formula>IF(
    OR(
        Profile.Name = &apos;Compass Lab&apos;,
        Profile.Name = &apos;System Administrator&apos;
    ),
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsScientist?</label>
    <type>Checkbox</type>
</CustomField>