force-app/main/default/objects/User/fields/IsWitness__c.field-meta.xml
<CustomField>
    <fullName>IsWitness__c</fullName>
    <formula>CONTAINS(Profile.Name, &apos;Patient Services&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsWitness?</label>
    <type>Checkbox</type>
</CustomField>