force-app/main/default/objects/User/fields/sumoapp__AlternateHostName__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AlternateHostName__c</fullName>
    <label>SUMO Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>