force-app/main/default/objects/User/fields/User_Allowed_to_Cycle_On__c.field-meta.xml
<CustomField>
    <fullName>User_Allowed_to_Cycle_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Allowed to Cycle On</label>
    <type>Checkbox</type>
</CustomField>