force-app/main/default/objects/User/fields/x7s_prowiz__Profile_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>x7s_prowiz__Profile_Percent_Complete__c</fullName>
    <formula>(
IF(ISBLANK(Title), 0, 1) +
IF(ISBLANK(Department), 0, 1) +
IF(ISBLANK(Division), 0, 1) +

IF(ISBLANK(Email), 0, 1) +
IF(ISBLANK(Phone), 0, 1) +
IF(ISBLANK(MobilePhone), 0, 1) +

IF(ISBLANK(Street), 0, 1) +
IF(ISBLANK(City) , 0, 1) +
IF(ISBLANK(State), 0, 1) +
IF(ISBLANK(PostalCode), 0, 1)

)


/ 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>